Fixed overlapping

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -137,11 +137,11 @@ html, body {
 }
 .hoverFromTab {
     transform: scale(1.1);
-    z-index: 1;
 }
 .active.clickable, .active button {
     transform: scale(1.1);
     filter: drop-shadow(0 0 6px grey);
+    z-index: 0;
 }
 
 .treeContainer {
